# howitt-rwgps-100k

./: .gitignore  README.md  codegen.sh  package.json
analysis/: mypy.ini  pyproject.toml
analysis/src/: flow.py  geo.py  highway_matching.py  main.py  point_delta.py  segments.py  spatial_service.py
analysis/src/lib/: aggregates.py  geo.py  osm.py  trip.py
analysis/src/ml/activity_type_classifier/: model.py
analysis/src/models/: rwgps.py  trip_dimensions.py  trip_segments.py
analysis/src/scripts/: inspect_highway_coords.py  inspect_trip_segment_dimensions.py  prepare_boundaries.py  prepare_highway_coords.py  process_trip_dimensions.py  process_trip_highways.py  process_trip_indexes.py  process_trip_segments.py  test_build_spatial_index.py
analysis/src/tasks/: osm.py
analysis/src/v0/: highway_matching.py  main.py  point_delta.py  spatial_service.py
analysis/stubs/: geojson.pyi  msgpack.pyi
schemas/: bundled_strava_openapi3.json
scrape/: package.json
scrape/src/scripts/: createTripsGeoJson.ts  downloadTrips.ts  gridSearchRwgps.ts  inspectTripBatch.ts  testRwgps.ts
scrape/src/strava/: README.md  stravaApi.ts
scrape/src/strava/schemas/: bundled_strava_swagger.json
src/geo/: sliceIntoBboxes.ts
src/rwgps/: api.ts  rwgpsExamples.ts  types.ts
src/scripts/: batchTrips.ts  createTripsGeoJson.ts  gridSearchRwgps.ts  inspectTripBatch.ts  sliceBbox.ts
