[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "geojson>=3.2.0",
    "jax>=0.5.2",
    "matplotlib>=3.10.1",
    "msgpack>=1.1.0",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "shapely>=2.0.7",
    "types-aiofiles>=24.1.0.20241221",
    "types-shapely>=2.0.0.20250202",
]
